"Update media queries at breakpoint 1340 to fix alignment issue"

--- a/style.css
+++ b/style.css
@@ -3119,7 +3119,7 @@ body,html{
 
  
  .shoe-container{
-     grid-template-columns:repeat(3,1fr);
+     grid-template-columns:repeat(2,1fr);
      margin: auto;
  }
 
@@ -3156,6 +3156,7 @@ body,html{
 .blazer{
     display:flex;
     flex-direction:column;
+    align-items: center;
 }
 
 
